--- a/.eslintrc
+++ b/.eslintrc
@@ -5,15 +5,7 @@
   },
   "ignorePatterns": ["node_modules", "dist", "build"],
   "extends": [
-    "eslint:recommended",
     "airbnb",
-    "plugin:import/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended",
     "prettier"
   ],
   "parser": "@babel/eslint-parser",
@@ -27,7 +19,7 @@
       "presets": ["@babel/preset-react"]
     }
   },
-  "plugins": ["react", "prettier", "import"],
+  "plugins": ["react", "prettier"],
   "rules": {
     "arrow-body-style": "off",
     "prefer-arrow-callback": "off",
@@ -48,6 +40,7 @@
     "jsx-a11y/no-autofocus": "off",
     "consistent-return": "off",
     "no-plusplus": "off",
+    "jsx-a11y/control-has-associated-label": "off",
     "import/order": [
       2,
       {
