--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,29 @@
 {
   "env": {
-    "browser": true,
+  "browser": true,
     "es2021": true
-  },
+},
   "ignorePatterns": ["node_modules", "dist", "build"],
   "extends": [
-    "airbnb",
-    "prettier"
-  ],
+  "airbnb",
+  "prettier"
+],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
+  "ecmaFeatures": {
+    "jsx": true
+  },
+  "ecmaVersion": 12,
     "sourceType": "module",
     "babelOptions": {
-      "presets": ["@babel/preset-react"]
-    }
-  },
-  "plugins": ["react", "prettier"],
+    "presets": ["@babel/preset-react"]
+  }
+},
+  "plugins": ["react"],
   "rules": {
-    "arrow-body-style": "off",
+  "arrow-body-style": "off",
     "prefer-arrow-callback": "off",
     "no-unused-vars": 0,
-    "no-unused-expressions": "off",
     "indent": ["error", 2],
     "linebreak-style": [0, "unix"],
     "quotes": ["error", "single"],
@@ -44,26 +43,26 @@
     "no-return-assign": "off",
     "no-param-reassign": "off",
     "import/order": [
-      2,
-      {
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "parent",
-          "sibling",
-          "index"
-        ],
-        "newlines-between": "always"
-      }
-    ]
-  },
+    2,
+    {
+      "groups": [
+        "builtin",
+        "external",
+        "internal",
+        "parent",
+        "sibling",
+        "index"
+      ],
+      "newlines-between": "always"
+    }
+  ]
+},
   "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+  "import/resolver": {
+    "node": {
+      "extensions": [".js", ".jsx", ".ts", ".tsx"],
         "moduleDirectory": ["node_modules", "src/"]
-      }
     }
   }
+}
 }
